<resources>
    <string name="app_name">Projects</string>
    <string name="vehicle_insurance_app">Vehicle Insurance App</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="vehicle_insurance">Vehicle Insurance</string>
    <string name="login_with_email">Login with Email</string>
    <string name="don_t_have_accounts">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="spassword">Password</string>
    <string name="semail">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
</resources>